--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <div class="col-lg-12 text-left">
         
           <span class="bold">Datenschutzerklärung</span><br>
-          <span class="copyright">Diese Webseite verwendet keine Cookies. Die Daten dieser Webseite werden auf Servern der Firma gitlab gespeichert. Diese wertet durch einen Zugriff angebotene Information in anonymisierter Form aus (etwa IP Adresse, Browser, URL). Details finden sich unter der <a href="https://about.gitlab.com/privacy/">Gitlab Privacy Policy</a>. Desweiteren wird eine Karte der Firma Google auf der Seite eingebunden. Google wertet wie gitlab diese Information in anonymisierter Form aus. Details finden sich unter der <a href="https://policies.google.com/privacy?hl=de&gl=de">Google Datenschutzerklärung</a>. Die Nutzung dieser Dienste ist als berechtigtes Interesse im Sinne von Art. 6 Abs. 1 lit. f DSGVO gedeckt.</span>
+          <span class="copyright">Diese Webseite verwendet keine Cookies. Die Daten dieser Webseite werden auf Servern der Firma github gespeichert. Diese wertet durch einen Zugriff angebotene Information in anonymisierter Form aus (etwa IP Adresse, Browser, URL). Details finden sich unter der <a href="https://help.github.com/en/github/site-policy/github-privacy-statement">Github Privacy Policy</a>. Desweiteren wird eine Karte der Firma Google auf der Seite eingebunden. Google wertet wie Github diese Information in anonymisierter Form aus. Details finden sich unter der <a href="https://policies.google.com/privacy?hl=de&gl=de">Google Datenschutzerklärung</a>. Die Nutzung dieser Dienste ist als berechtigtes Interesse im Sinne von Art. 6 Abs. 1 lit. f DSGVO gedeckt.</span>
         </div>
       </div>
     </div>
