--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
-          <span class="copyright">Copyright &copy; Andreas M. Prell 2019</span>
+          <span class="copyright">Copyright &copy; Andreas M. Prell 2019-2020</span>
         </div>
 
       </div>
