--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Besuchadresse</h2>
           <h3 class="section-subheading text-muted">Besuch nach Absprache.</h3>
-          <style>#mapFrame { width:100%; height:100%; }</style>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4969.161112533789!2d7.218120000000001!3d51.484213!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8e03fbc1a7aed%3A0xa4018dd909363d34!2sKortumstra%C3%9Fe+121%2C+44787+Bochum%2C+Germany!5e0!3m2!1sen!2sus!4v1563483645062!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen id="mapFrame"></iframe>
+          <style>#mapFrame { width:100%; }</style>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4969.161112533789!2d7.218120000000001!3d51.484213!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8e03fbc1a7aed%3A0xa4018dd909363d34!2sKortumstra%C3%9Fe+121%2C+44787+Bochum%2C+Germany!5e0!3m2!1sen!2sus!4v1563483645062!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen height=600 id="mapFrame"></iframe>
           <p class="text-on-black">Parkplätze befinden sich auf der Kortumstrasse, der Brückstrasse und im Parkhaus auf der Brückstrasse.</p>
         </div>
       </div>
