--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Rechtsanwalts&shy;kanzlei</h2>
+          <h2 class="section-heading text-uppercase">Rechts&shy;anwalts&shy;kanzlei</h2>
           <h3 class="section-subheading text-muted">Ich stehe Ihnen in allen Fragen des Rechts mit Rat und Tat zur Seite.</h3>
         </div>
       </div>
