--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Rechtsgebiete</h2>
+          <h2 class="section-heading text-uppercase">Rechts&shy;gebiete</h2>
           <h3 class="section-subheading text-muted">Ich vertrete insbesondere die Rechtsgebiete Sozialrecht, Versicherungsrecht, Arbeitsrecht</h3>
         </div>
       </div>
@@ -431,7 +431,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Vielgestellte Fragen</h2>
+          <h2 class="section-heading text-uppercase">Viel&shy;gestellte Fragen</h2>
           <h3 class="section-subheading text-muted">Frequently asked questions (FAQ)</h3>
         </div>
       </div>
@@ -488,7 +488,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Kontaktaufnahme</h2>
+          <h2 class="section-heading text-uppercase">Kontakt&shy;aufnahme</h2>
           <h3 class="section-subheading text-muted">Wählen Sie die für Sie bequemste Art der Kontaktaufnahme.</h3>
         </div>
       </div>
@@ -524,7 +524,7 @@
 
       <div class="row top-space">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Besuchadresse</h2>
+          <h2 class="section-heading text-uppercase">Besuch&shy;adresse</h2>
           <h3 class="section-subheading text-muted">Besuch nach Absprache.</h3>
           <style>#mapFrame { width:100%; }</style>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4969.161112533789!2d7.218120000000001!3d51.484213!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b8e03fbc1a7aed%3A0xa4018dd909363d34!2sKortumstra%C3%9Fe+121%2C+44787+Bochum%2C+Germany!5e0!3m2!1sen!2sus!4v1563483645062!5m2!1sen!2sus" frameborder="0" style="border:0" allowfullscreen height=600 id="mapFrame"></iframe>
