--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Andreas M. Prell</div>
-        <div class="intro-heading text-uppercase">Rechtsanwalt &amp; Fachanwalt für Sozialrecht</div>
+        <div class="intro-heading text-uppercase">Rechts&shy;anwalt &amp; Fachanwalt für Sozialrecht</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mehr erfahren</a>
       </div>
     </div>
