--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Rechts&shy;gebiete</h2>
-          <h3 class="section-subheading text-muted">Ich vertrete insbesondere die Rechtsgebiete Sozialrecht, Versicherungsrecht, Arbeitsrecht</h3>
+          <h3 class="section-subheading text-muted">Ich vertrete insbesondere die Rechtsgebiete Sozialrecht und Versicherungsrecht</h3>
         </div>
       </div>
       <div class="row text-center">
@@ -364,6 +364,7 @@
                 </ul>
             </details>
         </div>
+        <!--
         <div class="col-md-4">
           <h4 class="service-heading">Arbeitsrecht</h4>
           <details><summary>Vertrag &amp; Bedingungen</summary>
@@ -407,6 +408,7 @@
               </ul>
           </details>
         </div>
+        -->
         <!-- <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
             <div class="portfolio-hover">
