--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/cv/andreas.png" alt="Porträtfoto Andreas M. Prell">
+                <img class="rounded-circle img-fluid" src="img/cv/andreas-2.png" alt="Porträtfoto Andreas M. Prell">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -204,7 +204,7 @@
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h4 class="service-heading">Sozialrecht</h4>
             <details>
 			<summary>Arbeitslosengeld II (Hartz 4)</summary>
@@ -329,7 +329,7 @@
             </details>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h4 class="service-heading">Versicherungsrecht</h4>
             <details><summary>Private Krankenversicherung</summary>
                 <ul>
