--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </div>
       <div class="row text-center">
         <div class="col-md-6">
-          <h4 class="service-heading">Sozialrecht</h4>
+          <h4 class="service-heading-left">Sozialrecht</h4>
             <details>
 			<summary>Arbeitslosengeld II (Hartz 4)</summary>
 				<ul>
@@ -330,7 +330,7 @@
         </div>
 
         <div class="col-md-6">
-          <h4 class="service-heading">Versicherungsrecht</h4>
+          <h4 class="service-heading-left">Versicherungsrecht</h4>
             <details><summary>Private Krankenversicherung</summary>
                 <ul>
                 <li>Krankheitskostenversicherung</li>
@@ -444,7 +444,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <h4 class="service-heading">Kosten</h4>
+          <h4 class="service-heading-left">Kosten</h4>
             <details>
 			<summary>Was kostet eine Erstberatung?</summary>
               Die Gebühr für eine Erstberatung beträgt bei Verbrauchern höchstens 190,00 Euro - unabhängig davon, wie lange die Beratung dauert zzgl. Mehrwertsteuer und ggfs. Kosten für Kopien. In vielen Fällen kostet die Erstberatung deutlich weniger als diese Höchstgebühr, in Abhängigkeit von Komplexität und Dauer. In jedem Fall gebe ich Ihnen eine realistische Einschätzung über die Kosten bevor diese anfallen.
@@ -464,7 +464,7 @@
           </div>
         </div>
 
-        <h4 class="service-heading">Verfahren</h4>
+        <h4 class="service-heading-left">Verfahren</h4>
           <details>
           <summary>Was muss ich zur Ersteberatung mitbringen?</summary>
             Sie sollten alle Ihnen verfügbaren Dokumente bezgl. der Beratung mitbringen. Falls Ihnen möglich und in dringlichen Fällen können Sie diese einscannen und vorab per email zuschicken..
