--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-md-6">
+        <div class="col-lg-12">
           <h4 class="service-heading-left">Sozialrecht</h4>
             <details>
 			<summary>Arbeitslosengeld II (Hartz 4)</summary>
@@ -329,7 +329,7 @@
             </details>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-lg-12">
           <h4 class="service-heading-left">Versicherungsrecht</h4>
             <details><summary>Private Krankenversicherung</summary>
                 <ul>
