--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
             <i class="fas fa-envelope fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading text-on-black">Email</h4>
-          <p class="text-on-black">Schicken Sie eine <a href="mailto:andreas.prell@gmx.de?subject=Kontaktaufnahme&amp;body=Sehr%20geehrter%20Herr%20Prell,%0D%0A%0D%0Aich%20möchte%20gerne%20eine%20Termin%20vereinbaren./Ich%20habe%20folgende%20Frage.%0D%0A%0D%0AMit%20freundlichen%20Grüßen,">email</a>. Dieser <a href="mailto:andreas.prell@gmx.de?subject=Kontaktaufnahme&amp;body=Sehr%20geehrter%20Herr%20Prell,%0D%0A%0D%0Aich%20möchte%20gerne%20eine%20Termin%20vereinbaren./Ich%20habe%20folgende%20Frage.%0D%0A%0D%0AMit%20freundlichen%20Grüßen,">Link</a> öffnet eine email in Ihrem email-Programm.</p>
+          <p class="text-on-black">Schicken Sie eine <a href="mailto:prell@posteo.de?subject=Kontaktaufnahme&amp;body=Sehr%20geehrter%20Herr%20Prell,%0D%0A%0D%0Aich%20möchte%20gerne%20eine%20Termin%20vereinbaren./Ich%20habe%20folgende%20Frage.%0D%0A%0D%0AMit%20freundlichen%20Grüßen,">email</a>. Dieser <a href="mailto:prell@posteo.de?subject=Kontaktaufnahme&amp;body=Sehr%20geehrter%20Herr%20Prell,%0D%0A%0D%0Aich%20möchte%20gerne%20eine%20Termin%20vereinbaren./Ich%20habe%20folgende%20Frage.%0D%0A%0D%0AMit%20freundlichen%20Grüßen,">Link</a> öffnet eine email in Ihrem email-Programm.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -541,7 +541,7 @@
           <tr><td>Adresse</td><td>Kortumstr. 121, 44787 Bochum</td></tr>
           <tr><td>Telefon</td><td>0234 9278538</td></tr>
           <tr><td>Telefax</td><td>0234 9278239</td></tr>
-          <tr><td>Email</td><td>andreas.prell@gmx.de</td></tr>
+          <tr><td>Email</td><td>prell@posteo.de</td></tr>
           <tr><td>Sprechzeiten</td><td>Mo, Di, Do: 9:00-12:00 &amp; 14:00-17:00, Mi, Fr: 9:00-12:00</td></tr>
           </table>
         </div>
@@ -555,7 +555,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
-          <span class="copyright">Copyright &copy; Andreas M. Prell 2019-2020</span>
+          <span class="copyright">Copyright &copy; Andreas M. Prell 2019-2022</span>
         </div>
 
       </div>
@@ -565,7 +565,7 @@
           <span class="bold">Angaben gemäß § 5 TMG</span><br>
           <span class="copyright">
             Rechtsanwalt Andreas Martin Prell,
-            Kortumstr. 121, 44787 Bochum, Tel.: 0234 9278538 Fax: 0234 9278239, E-Mail: andreas.prell@gmx.de
+            Kortumstr. 121, 44787 Bochum, Tel.: 0234 9278538 Fax: 0234 9278239, E-Mail: prell@posteo.de
           </span><br>
           <span class="copyright">
           Kammer: Rechtsanwaltskammer Hamm, USt-ID: 306/5971/1284
